syntax = "proto3";

package gateway;

option go_package = "./service/gateway/proto;proto";

enum MessageType {
  Aync = 0;
  Request = 1;
  Response = 2;
}

message ClientMessage {
  string name = 1;
  bytes body = 2;
  int64 msgid = 3;
  MessageType msgtype = 4;
  oneof endpoint {
    string nodeid = 5;
    string server = 6;
  }
}

message ServerMessage {
  string name = 1;
  bytes body = 2;
  int32 errcode = 3;
  MessageType msgtype = 4;
  string errmsg = 5;
  int64 msgid = 6;
}

message CaptchaQuestion {
  string captch_id = 1;
  string captch_type = 2;
  bytes catpch_raw = 3;
}

message CaptchaAnswer {
  string captch_id = 1;
  string captch_type = 2;
  string captch_answer = 3;
}

message AccountInfo {
  string account = 1;
  string passwd = 2;
  CaptchaAnswer answer = 3;
}

message SessionInfo {
  string account = 1;
  string sessionid = 2;
}

message LoginRequest {
  oneof checker {
    AccountInfo account = 1;
    SessionInfo session = 2;
    string jwt = 3;
  }
}

message LoginResponse {
  enum Flag {
    Success = 0;
    UnknowError = 1;
  }
  Flag flag = 1;
  string sessionid = 2;
}

message EchoRequest {
  bytes data = 1;
}

message EchoResponse {
  bytes data = 1;
}
